--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "face-api.js": "^0.22.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-google-calendar-api": "^1.0.11",
     "react-scripts": "3.4.0"
   },
   "scripts": {
