--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=http://localhost:5000
 REACT_APP_WEATHER_API_KEY=d16f7adaa00f6f9af92f6d2f27fb79bc
+REACT_APP_NEWS_API_KEY=1cbb0f8d803842e0a478fb521611062a
